--- a/app/views/admin/professional_skills/index.html.erb
+++ b/app/views/admin/professional_skills/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "Professional skill" %>
+<% content_for :title, "Professional skills" %>
 
 <section class="px-3 py-5 p-md-5">
   <div class="container single-col-max-width">
