--- a/app/views/admin/languages/index.html.erb
+++ b/app/views/admin/languages/index.html.erb
@@ -1,13 +1,13 @@
-<% content_for :title, "Interests" %>
+<% content_for :title, "Languages" %>
 
 <section class="px-3 py-5 p-md-5">
   <div class="container single-col-max-width">
     <%= tag.div(flash[:notice], class: "text-success mb-3") if flash[:notice] %>
 
     <div class="d-flex justify-content-between align-items-center">
-      <h5>Interests</h5>
-      <a href="<%= new_admin_interest_path %>" data-turbo-action="advance">
-        <button type="button" class="btn btn-primary btn-sm">Add interest</button>
+      <h5>Languages</h5>
+      <a href="<%= new_admin_language_path %>" data-turbo-action="advance">
+        <button type="button" class="btn btn-primary btn-sm">Add language</button>
       </a>
     </div>
 
@@ -15,28 +15,30 @@
       <thead>
         <tr>
           <th>#</th>
-          <th>Interest Name</th>
+          <th>Language Name</th>
+          <th>Proficiency</th>
           <th></th>
         </tr>
       </thead>
 
       <tbody>
-      <% @interests.each do |interest| %>
+      <% @languages.each do |language| %>
         <tr>
-          <th><%= interest.id %></th>
-          <td><%= interest.name %></td>
+          <th><%= language.id %></th>
+          <td><%= language.name %></td>
+          <td><%= language.proficiency&.humanize %></td>
           <td>
             <div class="d-flex gap-2">
-              <a href="<%= edit_admin_interest_path(interest) %>" data-turbo-action="advance">
+              <a href="<%= edit_admin_language_path(language) %>" data-turbo-action="advance">
                 <button type="button" class="btn btn-sm btn-outline-primary">Edit</button>
               </a>
               <%= button_to "Delete",
-                            admin_interest_path(interest),
+                            admin_language_path(language),
                             method: :delete,
                             class: "btn btn-danger btn-sm",
                             form: {
                               data: {
-                                turbo_confirm: "Are you sure you want to delete this interest?",
+                                turbo_confirm: "Are you sure you want to delete this language?",
                                 turbo_confirm_type: "danger"
                               }
                             } %>
