--- a/app/views/admin/languages/edit.html.erb
+++ b/app/views/admin/languages/edit.html.erb
@@ -23,7 +23,7 @@
       </div>
 
       <div class="my-2">
-        <%= form.label :proficiency, class: "required" %>
+        <%= form.label :proficiency %>
         <%= form.select :proficiency, options_for_select(proficiency_options, @language.proficiency) %>
       </div>
 
