Rename project name to `is-bio`.

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer text-center py-2 theme-bg-dark">
-  <small class="copyright"><a href="https://github.com/PersonalBranding/personal-brand-website-builder" target="_blank">Build a personal brand website</a></small>,
+  <small class="copyright"><a href="https://github.com/is-bio/is-bio" target="_blank">isBio: personal website builder</a></small>,
   <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
   <small class="copyright">UI by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying</a></small>
 </footer>
