--- a/app/views/resumes/show.html.erb
+++ b/app/views/resumes/show.html.erb
@@ -217,14 +217,17 @@
 <hr>
 <div class="resume-footer text-center">
   <ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
-    <li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i
-      class="fa-brands fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span
-      class="d-none d-lg-inline-block text-muted">github.com/username</span></a></li>
-    <li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i
-      class="fa-brands fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i><span
-      class="d-none d-lg-inline-block text-muted">linkedin.com/in/username</span></a></li>
-    <li class="list-inline-item mb-lg-0 me-lg-3"><a class="resume-link" href="#"><i
-      class="fa-brands fa-square-x-twitter fa-2x me-2" data-fa-transform="down-4"></i><span
-      class="d-none d-lg-inline-block text-muted">@twittername</span></a></li>
+  <% @social_media_accounts.where.not(key: %w[phone_number website_url blog_url]).each do |account| %>
+    <% if account.compatible_target_url.present? %>
+    <li class="list-inline-item mb-lg-0 me-3">
+      <a class="resume-link" href="<%= account.compatible_target_url %>" target="_blank">
+        <i class="fa-brands <%= account.icon_name %> fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted"><%= account.compatible_target_url %></span>
+      </a>
+    </li>
+    <% end %>
+  <% end %>
+    <li class="list-inline-item mb-lg-0">
+    <% if @can_edit %>&nbsp;<%= link_to "edit social", admin_social_media_accounts_path, title: "Edit Social Media Accounts" %><% end %>
+    </li>
   </ul>
-</div><!--//resume-footer-->
+</div>
