--- a/app/views/admin/email_subscribers/new.html.erb
+++ b/app/views/admin/email_subscribers/new.html.erb
@@ -8,7 +8,7 @@
 
     <h5 class="mb-3">New Email Subscriber</h5>
 
-    <%= form_with(model: [:admin, @email_subscriber], url: admin_email_subscribers_path) do |form| %>
+    <%= form_with(model: [:admin, @email_subscriber], url: admin_email_subscribers_path, data: { "turbo-action": "advance" }) do |form| %>
       <% if @email_subscriber.errors.any? %>
         <div style="color: red">
           <h2><%= pluralize(@email_subscriber.errors.count, "error") %> prohibited this subscriber from being saved:</h2>
