--- a/app/views/admin/experiences/edit.html.erb
+++ b/app/views/admin/experiences/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="container single-col-max-width">
     <h5 class="mb-3">Edit experience</h5>
 
-    <%= form_with(model: [:admin, @experience]) do |form| %>
+    <%= form_with(model: [:admin, @experience], data: { "turbo-action": "advance" }) do |form| %>
       <% if @experience.errors.any? %>
         <div style="color: red">
           <h2><%= pluralize(@experience.errors.count, "error") %> prohibited this experience from being saved:</h2>
