--- a/app/views/admin/github_app_settings/edit.html.erb
+++ b/app/views/admin/github_app_settings/edit.html.erb
@@ -8,7 +8,7 @@
 
     <h5 class="mb-3">Edit GitHub App setting</h5>
 
-    <%= form_with(model: [:admin, @github_app_setting]) do |form| %>
+    <%= form_with(model: [:admin, @github_app_setting], data: { "turbo-action": "advance" }) do |form| %>
       <% if @github_app_setting.errors.any? %>
         <div style="color: red">
           <h2><%= pluralize(@github_app_setting.errors.count, "error") %> prohibited this GitHub App setting from being saved:</h2>
