--- a/app/views/admin/interests/edit.html.erb
+++ b/app/views/admin/interests/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="container single-col-max-width">
     <h5 class="mb-3">Edit interest</h5>
 
-    <%= form_with(model: [:admin, @interest]) do |form| %>
+    <%= form_with(model: [:admin, @interest], data: { "turbo-action": "advance" }) do |form| %>
       <% if @interest.errors.any? %>
         <div style="color: red">
           <h2><%= pluralize(@interest.errors.count, "error") %> prohibited this interest from being saved:</h2>
