--- a/app/views/admin/locales/new.html.erb
+++ b/app/views/admin/locales/new.html.erb
@@ -8,7 +8,7 @@
 
     <h5 class="mb-3">Add Locale</h5>
 
-    <%= form_with(model: [:admin, @locale], url: admin_locales_path) do |form| %>
+    <%= form_with(model: [:admin, @locale], url: admin_locales_path, data: { "turbo-action": "advance" }) do |form| %>
       <% if @locale.errors.any? %>
         <div style="color: red">
           <h2><%= pluralize(@locale.errors.count, "error") %> prohibited this locale from being saved:</h2>
