--- a/app/views/admin/projects/new.html.erb
+++ b/app/views/admin/projects/new.html.erb
@@ -4,7 +4,7 @@
   <div class="container single-col-max-width">
     <h5 class="mb-3">Add project</h5>
 
-    <%= form_with(model: [:admin, @project]) do |form| %>
+    <%= form_with(model: [:admin, @project], data: { "turbo-action": "advance" }) do |form| %>
       <% if @project.errors.any? %>
         <div style="color: red">
           <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
