--- a/app/views/admin/settings/edit.html.erb
+++ b/app/views/admin/settings/edit.html.erb
@@ -8,7 +8,7 @@
 
     <h5 class="mb-3">Edit setting</h5>
 
-    <%= form_with(model: [:admin, @setting]) do |form| %>
+    <%= form_with(model: [:admin, @setting], data: { "turbo-action": "advance" }) do |form| %>
       <% if @setting.errors.any? %>
         <div style="color: red">
           <h2><%= pluralize(@setting.errors.count, "error") %> prohibited this setting from being saved:</h2>
