--- a/app/views/admin/technical_skills/edit.html.erb
+++ b/app/views/admin/technical_skills/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="container single-col-max-width">
     <h5 class="mb-3">Edit technical skill</h5>
 
-    <%= form_with(model: [:admin, @technical_skill]) do |form| %>
+    <%= form_with(model: [:admin, @technical_skill], data: { "turbo-action": "advance" }) do |form| %>
       <% if @technical_skill.errors.any? %>
         <div style="color: red">
           <h2><%= pluralize(@technical_skill.errors.count, "error") %> prohibited this technical skill from being saved:</h2>
