--- a/app/views/admin/translations/_form.html.erb
+++ b/app/views/admin/translations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [:admin, @post, translation]) do |form| %>
+<%= form_with(model: [:admin, @post, translation], data: { "turbo-action": "advance" }) do |form| %>
   <% if translation.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(translation.errors.count, "error") %> prohibited this translation from being saved:</h2>
