--- a/app/views/shared/_left_sidebar.html.erb
+++ b/app/views/shared/_left_sidebar.html.erb
@@ -18,12 +18,12 @@
         </div>
 
         <ul class="social-list list-inline py-3 mx-auto">
-          <% SocialMediaAccount.where.not(value: nil).each_with_index do |setting, i| %>
+          <% SocialMediaAccount.where.not(value: nil).each_with_index do |account, i| %>
             <li class="list-inline-item <%= i >= 5 && i % 5 == 0 ? 'mt-2' : nil %>">
-              <% if setting.compatible_target_url.present? %>
-                <a href="<%= setting.compatible_target_url %>" target="_blank"><i class="<%= setting.icon_name %>"></i></a>
+              <% if account.compatible_target_url.present? %>
+                <a href="<%= account.compatible_target_url %>" target="_blank"><i class="<%= account.icon_name %>"></i></a>
               <% else %>
-                <a href="javascript:void(0)" role="button" data-bs-toggle="popover" data-bs-placement="top" title="<%= setting.key.titleize %>" data-bs-content="<%= setting.value %>"><i class="<%= setting.icon_name %>"></i></a>
+                <a href="javascript:void(0)" role="button" data-bs-toggle="popover" data-bs-placement="top" title="<%= account.key.titleize %>" data-bs-content="<%= account.value %>"><i class="<%= account.icon_name %>"></i></a>
               <% end %>
             </li>
           <% end %>
